--- a/apps/emqx/i18n/emqx_schema_i18n.conf
+++ b/apps/emqx/i18n/emqx_schema_i18n.conf
@@ -1810,6 +1810,53 @@ server_ssl_opts_schema_ocsp_refresh_http_timeout {
     }
 }
 
+server_ssl_opts_schema_enable_crl_check {
+    desc {
+        en: "Whether to enable CRL verification for this listener."
+        zh: "是否为该监听器启用 CRL 检查。"
+    }
+    label: {
+        en: "Enable CRL Check"
+        zh: "启用CRL检查"
+    }
+}
+
+server_ssl_opts_schema_crl_cache_urls {
+    desc {
+        en: "URLs for Certificate Revocation List (CRL) servers to fetch and cache CRLs from."
+            " Must include the path to the CRL file(s)."
+        zh: "从CRL服务器获取 CRL 的 URL。URL中必须指定 CRL 文件的路径。"
+    }
+    label: {
+        en: "CRL Cache URLs"
+        zh: "CRL缓存URLs"
+    }
+}
+
+crl_cache_refresh_http_timeout {
+    desc {
+        en: "The timeout for the HTTP request when fetching CRLs.  This is"
+            " global for all listeners."
+        zh: "获取CRLs时HTTP请求的超时。 这对所有监听器来说是全局的。"
+    }
+    label: {
+        en: "CRL Cache Refresh HTTP Timeout"
+        zh: "CRL缓存刷新HTTP超时"
+    }
+}
+
+crl_cache_refresh_interval {
+    desc {
+        en: "The period to refresh the CRLs from the servers.  This is global"
+            " for all URLs and listeners."
+        zh: "从服务器刷新CRL的周期。 这对所有URL和监听器来说是全局性的。"
+    }
+    label: {
+        en: "CRL Cache Refresh Interval"
+        zh: "CRL缓存刷新间隔"
+    }
+}
+
 fields_listeners_tcp {
     desc {
         en: """TCP listeners."""
