feat(crl): make crl caching automatic

--- a/apps/emqx/i18n/emqx_schema_i18n.conf
+++ b/apps/emqx/i18n/emqx_schema_i18n.conf
@@ -1817,7 +1817,7 @@ server_ssl_opts_schema_enable_crl_check {
     }
     label: {
         en: "Enable CRL Check"
-        zh: "启用CRL检查"
+        zh: "启用 CRL 检查"
     }
 }
 
@@ -1829,7 +1829,7 @@ server_ssl_opts_schema_crl_cache_urls {
     }
     label: {
         en: "CRL Cache URLs"
-        zh: "CRL缓存URLs"
+        zh: "CRL 缓存 URLs"
     }
 }
 
@@ -1837,11 +1837,11 @@ crl_cache_refresh_http_timeout {
     desc {
         en: "The timeout for the HTTP request when fetching CRLs.  This is"
             " global for all listeners."
-        zh: "获取CRLs时HTTP请求的超时。 这对所有监听器来说是全局的。"
+        zh: "获取 CRLs 时 HTTP 请求的超时。 这对所有监听器来说是全局的。"
     }
     label: {
         en: "CRL Cache Refresh HTTP Timeout"
-        zh: "CRL缓存刷新HTTP超时"
+        zh: "CRL 缓存刷新 HTTP 超时"
     }
 }
 
@@ -1853,7 +1853,22 @@ crl_cache_refresh_interval {
     }
     label: {
         en: "CRL Cache Refresh Interval"
-        zh: "CRL缓存刷新间隔"
+        zh: "CRL 缓存刷新间隔"
+    }
+}
+
+crl_cache_capacity {
+    desc {
+        en: "The maximum number of CRL URLs that can be held in cache.  If the cache is at"
+            " full capacity and a new URL must be fetched, then it'll evict the oldest"
+            " inserted URL in the cache."
+        zh: "缓存中可容纳的 CRL URL 的最大数量。"
+            " 如果缓存的容量已满，并且必须获取一个新的 URL，"
+            "那么它将驱逐缓存中插入的最老的 URL。"
+    }
+    label: {
+        en: "CRL Cache Capacity"
+        zh: "CRL 缓存容量"
     }
 }
 
