--- a/apps/emqx/test/emqx_crl_cache_SUITE_data/emqx.conf
+++ b/apps/emqx/test/emqx_crl_cache_SUITE_data/emqx.conf
@@ -1,5 +1,6 @@
-crl_cache.refresh_interval = 11m
+crl_cache.refresh_interval = {{ refresh_interval }}
 crl_cache.http_timeout = 17s
+crl_cache.capacity = {{ cache_capacity }}
 listeners.ssl.default {
   ssl_options {
     keyfile = "{{ test_data_dir }}/server.key.pem"
@@ -8,7 +9,6 @@ listeners.ssl.default {
     verify = verify_peer
     crl {
       enable_crl_check = true
-      cache_urls = {{{ crl_cache_urls }}}
     }
   }
 }
