--- a/apps/emqx_authn/rebar.config
+++ b/apps/emqx_authn/rebar.config
@@ -2,7 +2,8 @@
 
 {deps, [
     {emqx, {path, "../emqx"}},
-    {emqx_connector, {path, "../emqx_connector"}}
+    {emqx_connector, {path, "../emqx_connector"}},
+    {emqx_mongo, {path, "../emqx_mongo"}}
 ]}.
 
 {edoc_opts, [{preprocess, true}]}.
